--- a/week1/part1.html
+++ b/week1/part1.html
@@ -14,9 +14,9 @@
             <ul class="navlinks">
               <h1><a href="index.html">Jason | Product Team</a></h1>
               <li class="links">
-                <a href="./week1/part1.html">Week I</a>
+                <a href="./part1.html">Week I</a>
               </li>
-              <li class="links"><a href="week_2.html">Week II</a></li>
+              <li class="links"><a href="../week_2.html">Week II</a></li>
               <li class="links"><a href="Week_3.html">Week III</a></li>
               <li class="links"><a href="Week_4.html">Week IV</a></li>
             </ul>
