--- a/week1/part1.html
+++ b/week1/part1.html
@@ -4,7 +4,7 @@
   <head>
     <title>Jason Khambule | Profile | Howler Product Team | Week 1</title>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
 
   <body>
