Week 4/ Wrap up

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <ul class="navlinks">
           <h1><a href="index.html">Jason | Product Team</a></h1>
           <li class="links">
-						<a href="./week1/part1.html">Week I</a>
+						<a href="../wrapup/week1/part1.html">Week I</a>
 					</li>
-          <li class="links"><a href="week_2.html">Week II</a></li>
-          <li class="links"><a href="Week_3.html">Week III</a></li>
-          <li class="links"><a href="Week_4.html">Week IV</a></li>
+          <li class="links"><a href="../wrapup/week 2/week2.html">Week II</a></li>
+          <li class="links"><a href="../wrapup/week 3/Week_3.html">Week III</a></li>
+          <li class="links"><a href="../wrapup/week 4/Week_4.html">Week IV</a></li>
         </ul>
       </nav>
      </div>
@@ -28,8 +28,8 @@
       <div class="weeks">
 
           <article class="article1">
-					 <img id="week_one" class="week" src="assets/images/firstimage.png">
-						  <a href='./week1/part1.html'><h2>Week I</h2></a>
+					 <a href="../wrapup/week1/part1.html"><img id="week_one" class="week" src="assets/images/firstimage.png"></a>
+						  <a href='../wrapup/week1/part1.html'><h2>Week I</h2></a>
               <p>Methodology and Development Processes</p>
             </article>
 
@@ -38,8 +38,8 @@
        <div class="weeks">
 
           <article>
-           <img id="week_two"class="week" src="assets/images/secondimage.png">
-					 <a href='week_2.html'><h2>Week II</h2></a>
+           <a href="../wrapup/week 2/week2.html"><img id="week_two"class="week" src="assets/images/secondimage.png"></a>
+					 <a href='../wrapup/week 2/week2.html'><h2>Week II</h2></a>
 					 <p>The Internet</p>
           </article>
 
@@ -48,9 +48,9 @@
        <div class="weeks">
 
           <article>
-           <img id="week_three"class="week" src="assets/images/html.jpg">
-					 <a href='week_3.html'><h2>Week III</h2></a>
-           <p>< HTML Crash course /></HTML></p>
+           <a href="../wrapup/week 3/Week_3.html"><img id="week_three"class="week" src="assets/images/html.jpg"></a>
+					 <a href='../wrapup/week 3/Week_3.html'><h2>Week III</h2></a>
+           <p>TreeHouse = < HTML />, { CSS } & JS Crash course</HTML></p>
           </article>
 
        </div>
@@ -58,8 +58,8 @@
        <div class="weeks">
 
           <article>
-           <img id="week_four"class="week" src="assets/images/firstimage.png">
-					 <a href='week_4.html'><h2>Week IV</h2></a>
+           <a href="../wrapup/week 4/Week_4.html"><img id="week_four"class="week" src="assets/images/firstimage.png"></a>
+					 <a href='../wrapup/week 4/Week_4.html'><h2>Week IV</h2></a>
            <p>Wrap up of first month's learning</p>
           </article>
 
