--- a/week1/part1.html
+++ b/week1/part1.html
@@ -12,13 +12,13 @@
       <div>
           <nav class="nav">
             <ul class="navlinks">
-              <h1><a href="index.html">Jason | Product Team</a></h1>
+              <h1><a href="../index.html">Jason | Product Team</a></h1>
               <li class="links">
-                <a href="./part1.html">Week I</a>
+                <a href="../week1/part1.html">Week I</a>
               </li>
-              <li class="links"><a href="../week_2.html">Week II</a></li>
-              <li class="links"><a href="Week_3.html">Week III</a></li>
-              <li class="links"><a href="Week_4.html">Week IV</a></li>
+              <li class="links"><a href="../week 2/week2.html">Week II</a></li>
+              <li class="links"><a href="../week 3/Week_3.html">Week III</a></li>
+              <li class="links"><a href="../week 4/Week_4.html">Week IV</a></li>
             </ul>
           </nav>
          </div>
@@ -29,7 +29,7 @@
       <div class="weeks">
 
           <article>
-           <img class="week" src="assets/images/firstimage.png">
+           <img class="week" src="../assets/images/firstimage.png">
               <h2>Week I</h2>
               <p>Methodology and Development Processes - Presentation</p>
               
@@ -62,19 +62,19 @@
             <li><p class="points">- The written code is then reviewed by fellow developers on the team to establish if the written code of high quality and if the code is ready to undergo a quality check. Once the code has been ‘Approved’ by fellow developers is the code then able to undergo a quality check. (Slack.com to Github.com)</p></li>
             <li><p class="points">- Once approved the newly written code (Feature or Bug rectification) is then sent to a quality assurer who then puts the code to the test to establish if the code is of good quality and is ready to be sent for further testing. If the quality assurer finds the newly written code to be of poor quality the developer is then required to re-write the code in question, make it better and then undergo the review process again and once approved have the code re-sent to QA</p></li>
             <li><p class="points">- UAT Is the final testing phase that a newly written code undergoes usually by a actual customer audience or the product owner to insure that the feature is working effectively and has reached its overall objective.</p></li>
-            <li><p class="points">- Once the newly developed feature or bug rectification is done then is it deployed or merged into the master which will enable the newly developed feature to be put into use. Heroku.com</p></li>
+            <li><p class="points">-  the newly developed feature or bug rectification is done then is it deployed or merged into the master which will enable the newly developed feature to be put into use. Heroku.com</p></li>
           </ul>
 
-          <a href="week_1_2.html"><button>More Of Week I >>></button></a>
+          <a href="./part2.html"><button>More Of Week I >>></button></a>
 
           <footer>
               <div>
                 <div class="icons">
-                  <a  href="https://github.com/Jaymatic"><img class="social_links" src="assets/images/GitHub.svg"></a>
+                  <a  href="https://github.com/Jaymatic"><img class="social_links" src="../assets/images/GitHub.svg"></a>
                 </div>
                 <p class="rights">Designed & Developed By Jason Khambule</p>
               </div>
-              </footer>
+           </footer>
 
        </section>
 
