--- a/week 4/Week_4.html
+++ b/week 4/Week_4.html
@@ -4,19 +4,21 @@
   <head>
     <title>Jason Khambule | Profile | Howler Product Team | Week 1</title>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
 
   <body>
 
-      <div>
+    <div>
       <nav class="nav">
         <ul class="navlinks">
-          <h1>Jason | Product Team</h1>
-          <li class="links">Week I</li>
-          <li class="links">Week II</li>
-          <li class="links">Week III</li>
-          <li class="links">Week IV</li>
+          <h1><a href="../index.html">Jason | Product Team</a></h1>
+          <li class="links">
+						<a href="../week1/part1.html">Week I</a>
+					</li>
+          <li class="links"><a href="../week 2/week2.html">Week II</a></li>
+          <li class="links"><a href="../week 3/Week_3.html">Week III</a></li>
+          <li class="links"><a href="../week 4/Week_4.html">Week IV</a></li>
         </ul>
       </nav>
      </div>
@@ -26,48 +28,22 @@
       <div class="weeks">
 
           <article>
-           <img class="week" src="assets/images/firstimage.png">
-              <h2>Week I</h2>
-              <p>Methodology and Development Processes</p>
+           <img class="week" src="../assets/images/Week4.png">
+              <h2>Week IV</h2>
+              <h2>Thee Document - First month of interning</h2>
             </article>
 
           </div>
 
+          <ul class="week">
+            <li><p class="points">- </p></li>
+       </ul>
+       <ul class="week">
+          <li><p class="points">-</p></li>
+       </ul>
 
+       <a href="../index.html"><button>Back To Home Page >>></button></a>
 
-       <div class="weeks">
-
-          <article>
-           <img class="week" src="assets/images/secondimage.png">
-            <h2>Week II</h2>
-            <p>The Internet</p>
-          </article>
-
-       </div>
-
-
-
-       <div class="weeks">
-
-          <article>
-           <img class="week" src="assets/images/firstimage.png">
-           <h2>Week III</h2>
-           <p>< HTML Crash course /></HTML></p>
-          </article>
-
-       </div>
-
-
-
-       <div class="weeks">
-
-          <article>
-           <img class="week" src="assets/images/firstimage.png">
-           <h2>Week IV</h2>
-           <p>Wrap up of first month's learning</p>
-          </article>
-
-       </div>
        
        <footer>
           <div>
