--- a/week 4/Week_4.html
+++ b/week 4/Week_4.html
@@ -28,7 +28,7 @@
       <div class="weeks">
 
           <article>
-           <img class="week" src="../assets/images/Week4.png">
+           <img class="week" src="../assets/images/week4.png">
               <h2>Week IV</h2>
               <h2>Thee Document - First month of interning</h2>
             </article>
