--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
        <div class="weeks">
 
           <article>
-           <a href="../wrapup/week 4/Week_4.html"><img id="week_four"class="week" src="assets/images/firstimage.png"></a>
+           <a href="../wrapup/week 4/Week_4.html"><img id="week_four"class="week" src="assets/images/week4.png"></a>
 					 <a href='../wrapup/week 4/Week_4.html'><h2>Week IV</h2></a>
            <p>Wrap up of first month's learning</p>
           </article>
