--- a/week 4/Week_4.html
+++ b/week 4/Week_4.html
@@ -36,10 +36,7 @@
           </div>
 
           <ul class="week">
-            <li><p class="points">- </p></li>
-       </ul>
-       <ul class="week">
-          <li><p class="points">-</p></li>
+            <li><p class="points">- I’ve worked for Howler for almost 2 years now and prior to me applying for work at the company I had always wanted to work for the company due to my genuine interest in technology and  tech innovation. Being a young vibrant male I knew that Howler would be the ideal company to work for because of it’s poineering efforts to push South Africas ticketing and cashless experience to the next level which is a characteristic I could relate to being a go getter myself. For the month of September a dream if you would call it had come true, I had been given the opportunity to intern within the department I had always wanted to work in which was indeed the The Howler Product team. The past month has been some what of a dream for me, I’ve learn’t so much within such a short period of time all thanks to Howler and the amazing people that work for the company. One month in and I cannot wait for what is yet to come!</p></li>
        </ul>
 
        <a href="../index.html"><button>Back To Home Page >>></button></a>
