--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <html>
   <head>
     <title>Jason Khambule | Profile | Howler Product Team</title>
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet"><link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
 
   <body>
