--- a/week1/part1.html
+++ b/week1/part1.html
@@ -31,7 +31,7 @@
           <article>
            <img class="week" src="../assets/images/firstimage.png">
               <h2>Week I</h2>
-              <p>Methodology and Development Processes - Presentation</p>
+              <p>Methodology and Development Processes</p>
               
             </article>
             
