--- a/week 4/Week_4.html
+++ b/week 4/Week_4.html
@@ -30,7 +30,7 @@
           <article>
            <img class="week" src="../assets/images/week4.png">
               <h2>Week IV</h2>
-              <h2>Thee Document - First month of interning</h2>
+              <h2>First month of interning</h2>
             </article>
 
           </div>
