--- a/week1/part2.html
+++ b/week1/part2.html
@@ -29,7 +29,7 @@
 
           <article>
               <h2>Week I</h2>
-              <p>Methodology and Development Processes - Presentation</p>
+              <p>Methodology and Development Processes</p>
             </article>
             
           </div>
